# data-availability

./: .env.example  .env.example.dev  .env.example.prod  .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  dev-requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-docker.yml
configuration/: config.py  config_parser.py  contract_types.py  types.py  update_artifacts.sh
configuration/chain/flare/: contracts.json
configuration/chain/songbird/: contracts.json
configuration/configs/: coston.py  coston2.py  flare.py  songbird.py
docker/: docker-compose.dev.yaml  entrypoint-local.sh
docker/local/: docker-compose.yaml
docker/remote/: docker-compose.yaml  entrypoint.sh  start-process_fdc_data  start-process_ftso_data
fdc/: apps.py  models.py  urls.py  views.py
fdc/management/commands/: process_fdc_data.py
fdc/migrations/: 0001_initial.py  0002_alter_attestationresult_request_hex_and_more.py  0003_alter_attestationresult_request_hex_and_more.py
fdc/serializers/: data.py  query.py  request.py
fdc/serializers/v0/: data.py  query.py  request.py
fdc/serializers/v1/: data.py  query.py  request.py
fdc/test/: test_fdc.py
fdc/tests/: test_fdc.py  testing_data.json
fdc/urls/: v0.py  v1.py
fdc/views/: v0.py  v1.py
fsp/: admin.py  apps.py  epoch.py  models.py  serializers.py  urls.py  views.py
fsp/management/commands/: delete_history.py
fsp/migrations/: 0001_initial.py
ftso/: admin.py  apps.py  models.py  urls.py  views.py
ftso/management/commands/: process_ftso_data.py
ftso/migrations/: 0001_initial.py  0002_alter_feedresult_voting_round_id.py  0003_alter_randomresult_voting_round_id.py  0004_alter_feedresult_voting_round_id_and_more.py
ftso/serializers/: data.py  query.py  request.py
ftso/test/: test_base_model.py  test_ftso.py  test_merkle_tree.py  test_round_tree.py
ftso/tests/: test_base_model.py  test_ftso.py  testing_data.json
processing/: fdc_processing.py  ftso_processing.py  main.py  merkle_tree.py  processing.py  utils.py
processing/client/: ftso_client.py  main.py  types.py
project/: cache.py  debug.py  logging.py  urls.py
project/requirements/: common.txt  remote.txt
project/settings/: common.py  remote.py  testing.py
scripts/dev/: Dockerfile  docker-compose.yaml  entrypoint.sh
