[project]
name = "data-availability"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # django
    "django==5.1.3",
    "django-cors-headers==4.6.0",
    "djangorestframework==3.15.2",
    "drf-spectacular==0.27.2",
    "gunicorn==23.0.0",
    # database
    "psycopg[binary,pool]==3.2.3",
    # monitoring
    "prometheus-client==0.21.0",
    "django-prometheus==2.3.1",
    "sentry-sdk==2.18.0",
    # blockchain
    "web3==7.5.0",
    "py-flare-common==0.1.3",
    # other
    "attrs==24.2.0",
    "cattrs==24.1.2",
    "gevent==25.5.1",
]

[dependency-groups]
dev = [
    # lint and format
    "ruff==0.7.2",
    "pre-commit==4.0.1",

    # testing
    "unittest-xml-reporting==3.2.0",
    "coverage==7.6.4",

    # types
    "django-types==0.19.1",
    "djangorestframework-types==0.9.0",
]

[tool.ruff]
extend-exclude = ['venv', 'env', 'migrations']

[tool.ruff.lint]
select = [
    'F',    # pyflakes
    'E',    # pycodestyle
    'W',    # pycodestyle
    'I',    # isort
    'UP',   # pyupgrade
    'B',    # flake8-bugbear
    'C',    # flake8-comprehensions
    'DTZ',  # flake8-datetimez
    'DJ',   # flake8-django
    'RUF',  # ruff
]

ignore = [
    'E203', # whitespace before punctuation, conflict with black
    'E501', # line too long, handled by black
    'C901', # complex structure, not needed
]

[tool.ruff.lint.per-file-ignores]
'project/settings/*.py' = [
    'F403', # undefined local with import star
    'F405', # undefined local with import star usage
    'E402', # module import not at top of file
]

'__init__.py' = [
    'F401', # unused import
    'E402', # module import not at top of file
]

[tool.ruff.lint.pyflakes]
extend-generics = [
    'django.db.models.ForeignKey',
    'django.db.models.ForeignObject',
    'django.db.models.OneToOneField',
    'django.db.models.Manager',
]

[tool.coverage.run]
omit = ['project/*', 'manage.py', '*/migrations/*']

[tool.pyright]
reportIncompatibleVariableOverride = false
