[project]
name = "data-availability"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    # django
    "django==5.2.12",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "gunicorn==25.1.0",
    # database
    "psycopg[binary,pool]==3.3.3",
    "redis==6.2.0",
    # monitoring
    "prometheus-client==0.24.1",
    "django-prometheus==2.4.1",
    "sentry-sdk==2.53.0",
    # blockchain
    "web3==7.14.1",
    "py-flare-common==0.1.6",
    # other
    "attrs==25.4.0",
    "cattrs==26.1.0",
    "gevent==25.9.1",
    "python-json-logger==4.0.0",
]

[dependency-groups]
dev = [
    # lint and format
    "ruff==0.15.7",
    "pre-commit==4.5.1",

    # testing
    "pytest==9.0.2",
    "pytest-django==4.11.1",
    "pytest-cov==7.1.0",

    # types
    "django-types==0.23.0",
    "djangorestframework-types==0.9.0",
]

[tool.ruff]
extend-exclude = ['venv', 'env', 'migrations']

[tool.ruff.lint]
select = [
    'F',    # pyflakes
    'E',    # pycodestyle
    'W',    # pycodestyle
    'I',    # isort
    'UP',   # pyupgrade
    'B',    # flake8-bugbear
    'C',    # flake8-comprehensions
    'DTZ',  # flake8-datetimez
    'DJ',   # flake8-django
    'RUF',  # ruff
]

ignore = [
    'E203', # whitespace before punctuation, conflict with black
    'E501', # line too long, handled by black
    'C901', # complex structure, not needed
]

[tool.ruff.lint.per-file-ignores]
'project/settings/*.py' = [
    'F403', # undefined local with import star
    'F405', # undefined local with import star usage
    'E402', # module import not at top of file
]

'__init__.py' = [
    'F401', # unused import
    'E402', # module import not at top of file
]

[tool.ruff.lint.pyflakes]
extend-generics = [
    'django.db.models.ForeignKey',
    'django.db.models.ForeignObject',
    'django.db.models.OneToOneField',
    'django.db.models.Manager',
]

[tool.coverage.run]
omit = ['project/*', 'manage.py', '*/migrations/*']

[tool.pyright]
reportIncompatibleVariableOverride = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'project.settings.testing'
addopts = '--ds=project.settings.testing'
python_files = ['tests.py', 'tests/*.py']
